# access_lib

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
access_lib/: __init__.py  config.py
access_lib/core/: __init__.py  aggregation.py  demand.py  engine.py  facilities.py  graph.py  isochrones.py  od_matrix.py  specialization.py
access_lib/scenarios/: __init__.py  base.py  new_hospital.py  new_transit_route.py  real_hospital.py  road_closure.py  telemedicine.py
access_lib/simulation/: __init__.py  monte_carlo.py  sensitivity.py
access_lib/stats/: __init__.py  spatial.py
access_lib/viz/: __init__.py  charts.py  interactive.py  interactive_map.py  maps.py  method_diagram.py  style.py
data/sample/: boundaries.gpkg  bus_stops.gpkg  facilities.gpkg
tests/: __init__.py  test_scenarios.py
workflows/: ci.yml
